--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 	<title>Welcome to Mathias' webpage!</title>
 </head>
 <body>
-	Welcome! 
+	<div id="welcomebox">
+		<p>Welcome!</p>
 
-	This is a small page I, Mathias, am building in which I aim to present what I have created as well as what my academic interests are.
+		<p>I am a theoretical physicist currently on my last year of a masters degree in Lattice Quantum Chromodynamics(LQCD). In my degree I have built a program for generating and flowing field configuration adhering to Yang-Mills theory.</p>
 
-	I am a theoretical physicist currently on my last year of a masters degree in Lattice Quantum Chromodynamics(LQCD). In my degree I have built a program for generating and flowing field configuration adhering to Yang-Mills theory.
+		<p>This is a small page I, Mathias, am building in which I aim to present what I have created as well as what my academic interests are.</p>
+	</div>
+
 </body>
 </html>
 
