--- a/index.html
+++ b/index.html
@@ -5,14 +5,36 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div id="welcomebox">
-		<p>Welcome!</p>
+	<table border="1">
+		<thead>
+			<a href = "index.htm" target = "_blank">Home</a>
+			<td>Interests</td>
+			<td>Lattice QCD</td>
+			<td>Master thesis</td>
+			<td>Projects</td>
+			<td>About</td>
+		</thead>
+		<tbody>
+			<tr>
+				<div id="welcomebox">
+					<p>Welcome!</p>
 
-		<p>I am a theoretical physicist currently on my last year of a masters degree in Lattice Quantum Chromodynamics(LQCD). In my degree I have built a program for generating and flowing field configuration adhering to Yang-Mills theory.</p>
+					<p>I am a theoretical physicist currently on my last year of a masters degree in Lattice Quantum Chromodynamics(LQCD). In my degree I have built a program from scratch for generating and flowing field configuration adhering to Yang-Mills theory. TALK ABOUT ANALYSIS AS WELL</p>
 
-		<p>This page is currently <em>under construction</em>.</p>
-	</div>
+					<p>This page is currently <em>under construction</em>.</p>
+				</div>
+			</tr>
+			<tr>
+				<p>The action density of the gluon field in a cube of size 2.22 fermi.</p>
+				<img src="/img/energy_iso_surface_t800.gif" alt="Action density" title="Action density" />
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>
 
+			</tr>
+		</tfoot>
+	</table>
 </body>
 </html>
 
