Changed some text.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
 
 		<div id="welcometext">
-			<p>I am a theoretical physicist currently on my last year of a masters degree in Lattice Quantum Chromodynamics(LQCD). In my degree I have built a program from scratch for generating and flowing field configuration adhering to Yang-Mills theory.</p>
+			<p>I am a student in computational physics currently on my last year of a masters degree studying Lattice Quantum Chromodynamics(LQCD). In my degree I have built a program from scratch for generating and flowing field configuration adhering to Yang-Mills theory, as well as performing a subsequent and extensive analysis of the data generated.</p>
 			<p>This page is currently <em>under construction</em>.</p>
 		</div>
 
